--- a/clusters/my-cluster/django-kustomization.yaml
+++ b/clusters/my-cluster/django-kustomization.yaml
@@ -1,12 +1,11 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: django-kustomization
+  name: aws-granted
   namespace: flux-system
 spec:
   interval: 30s
-  path: ./clusters/my-cluster
+  path: ./
   prune: true
   sourceRef:
     kind: GitRepository
