--- a/nginx-ingress-controller/configmap-nginx-ingress-controller-helm-chart-value-overrides.yaml
+++ b/nginx-ingress-controller/configmap-nginx-ingress-controller-helm-chart-value-overrides.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-ingress-controller-helm-chart-value-overrides
-  namespace: nginx-ingress-controller
+  namespace: django-app
 data:
   values.yaml: |-
     # paste chart values.yaml (indented) here and alter as required
